home page to transfer page done
working on autocomplete user email

--- a/Individual-Project/static/css/style.css
+++ b/Individual-Project/static/css/style.css
@@ -189,3 +189,34 @@ text-decoration: underline;
 .select_option {
    color: #009688;
 }
+
+button{
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 2px solid #009688;
+    background: transparent;
+    color:black;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+
+span{
+    background-color: #009688;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: .3s;
+}
+
+button:hover span{
+    width: 100%;
+}
