--- a/Individual-Project/templates/home.html
+++ b/Individual-Project/templates/home.html
@@ -20,8 +20,13 @@
     </div>
 
     <div class="content">
-        <h3>THIS AMOUNT OF USERS</h3>
-        <h1>THIS AMOUNT OF MONEY TRANSFERRED</h1>
+        <h2>Hello, {{user['name']}}</h2>
+        <h1>Your balance: {{user['balance']}}</h1>
+        <div>
+            <a href="/transfer"><button><span></span>Transfer Money</button></a>
+            <a href="#"><button><span></span>Account History</button></a>
+            <a href="#"><button><span></span>Leaderboard</button></a>
+        </div>
     </div>
 
     
