--- a/Individual-Project/templates/login.html
+++ b/Individual-Project/templates/login.html
@@ -20,13 +20,13 @@
     </div>
 
     <div class="content">
-        <h3>THIS AMOUNT OF USERS</h3>
+        <h3>{{numOfUsers}} users have already signed in</h3>
         <h1>THIS AMOUNT OF MONEY TRANSFERRED</h1>
     </div>
 
     <div class="center">
         <h1>Login</h1>
-        <form action="POST" method="/">
+        <form action="/" method="POST">
             <div class="txt_field">
                 <input type="email" name="email" required>
                <span></span>
