--- a/Individual-Project/templates/history.html
+++ b/Individual-Project/templates/history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>Home</title>
+    <title>Account Histroy</title>
 </head>
 <body>
     <div class="banner">
@@ -20,15 +20,17 @@
     </div>
 
     <div class="content">
-        <h2>Hello, {{user['name']}}</h2>
-        <h1>Your balance: {{user['balance']}}</h1>
-        <div>
-            <a href="/transfer"><button><span></span>Transfer Money</button></a>
-            <a href="/history"><button><span></span>Account History</button></a>
-            <a href="#"><button><span></span>Leaderboard</button></a>
-        </div>
+        <h1>Account History:</h1>
+        <h2>Enter your credentials below:</h2>
     </div>
 
+    <div class="center">
+        {% for action in history %}
+            <div class="operation">
+                <p>{{</p>
+            </div>
+        {% endfor %}
+    </div>
     
 </body>
 </html>
