--- a/Individual-Project/templates/home.html
+++ b/Individual-Project/templates/home.html
@@ -10,7 +10,7 @@
         <div class="navbar">
             <img src="logo.png" class="logo">
             <ul>
-                <li><a href="#">SOMETHING</a></li>
+                <li><a href="/logout">Log out!</a></li>
                 <li><a href="#">SOMETHING</a></li>
                 <li><a href="#">SOMETHING</a></li>
                 <li><a href="#">SOMETHING</a></li>
