--- a/Individual-Project/templates/login.html
+++ b/Individual-Project/templates/login.html
@@ -20,8 +20,8 @@
     </div>
 
     <div class="content">
-        <h3>{{numOfUsers}} users have already signed in</h3>
-        <h1>THIS AMOUNT OF MONEY TRANSFERRED</h1>
+        <h3>{{num_of_users}} users have already signed in</h3>
+        <h1>${{total_amount_stored}} have been VERY SAFELY secured</h1>
     </div>
 
     <div class="center">
