--- a/Individual-Project/templates/history.html
+++ b/Individual-Project/templates/history.html
@@ -10,9 +10,9 @@
         <div class="navbar">
             <img src="logo.png" class="logo">
             <ul>
-                <li><a href="#">SOMETHING</a></li>
-                <li><a href="#">SOMETHING</a></li>
-                <li><a href="#">SOMETHING</a></li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/logout">Log out!</a></li>
+                <li><a href="/transfer">Make a payment</a></li>
                 <li><a href="#">SOMETHING</a></li>
             </ul>
 
@@ -21,13 +21,13 @@
 
     <div class="content">
         <h1>Account History:</h1>
-        <h2>Enter your credentials below:</h2>
     </div>
 
     <div class="center">
-        {% for action in history %}
+        {% for action, type in history_list.items() %}
             <div class="operation">
-                <p>{{</p>
+                <h4>{{type}}</h4>
+                <p>{{action}}</p>
             </div>
         {% endfor %}
     </div>
