--- a/Individual-Project/static/css/style.css
+++ b/Individual-Project/static/css/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .banner{
@@ -11,6 +14,7 @@
 
 .navbar {
     width: 85%;
+    background-color: rgba(0,0,0,.3);
     margin: auto;
     padding: 35px;
     display: flex;
@@ -20,7 +24,7 @@
 }
 
 .logo {
-    width: 120px;
+    width: 60px;
     cursor: pointer;
 }
 
@@ -33,7 +37,7 @@
 
 .navbar ul li a {
     text-decoration: none;
-    color: #837E7C;
+    color: #2b2827;
 }
 
 .navbar ul li::after{
@@ -72,7 +76,7 @@
 
 .center{
     position: absolute;
-    top:70%;
+    top:75%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 400px;
@@ -138,6 +142,11 @@ form .txt_field{
 .txt_field input:focus ~ span::before,
 .txt_field input:valid ~ span::before{
     width: 100%;
+}
+
+form .select_field{
+    margin-top:10px;
+
 }
 
 .forgot_password {
@@ -222,8 +231,8 @@ button:hover span{
 
 .operation{
     margin: 5px;
-    padding: 10px, 20px, 20px, 20px;
-    height: 40px;
+    padding: 10px, 10px, 20px, 10px;
+    height: 70px;
     background-color: #009688;
     border-radius: 4px;
 }
