--- a/Individual-Project/static/css/transfer.css
+++ b/Individual-Project/static/css/transfer.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .banner{
@@ -10,17 +13,17 @@
 }
 
 .navbar {
-    width: 85%;
+    width: 90%;
     margin: auto;
     padding: 35px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    background-color: rgba(0,0,0,.3);
 }
 
 .logo {
-    width: 120px;
+    width: 60px;
     cursor: pointer;
 }
 
@@ -33,10 +36,9 @@
 
 .navbar ul li a {
     text-decoration: none;
-    color: #837E7C;
-    text-transform: uppercase;
-}
+    color: #2b2827;
 
+}
 .navbar ul li::after{
     content: '';
     height: 3px;
@@ -55,12 +57,33 @@
 .content{
     width: 100%;
     position: absolute;
-    top: 30%;
+    top: 50%;
     transform: translateY(-50%);
     text-align: center;
 }
 
 input {
-    justify-content: space-between;
+    border: 1px solid transparent;
+    background-color: #f1f1f1;
+    padding: 10px;
+    font-size: 16px;
+}
+  
+input[type=text]:enabled{
+    background-color: #f1f1f1;
+    width: 100%;
+
 }
 
+input[type=submit]{
+    background-color: DodgerBlue;
+    color: #fff;
+}
+
+input[type="email"]:disabled{
+    background-color: #E5E4E2;
+}
+
+.transfer {
+    padding-top: 150px;
+}
