--- a/Individual-Project/templates/leaderboard.html
+++ b/Individual-Project/templates/leaderboard.html
@@ -3,32 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/css/style.css">
-    <title>Account History</title>
+    <title>Leaderboard</title>
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="../static/media/logo.png" class="logo">
+            <img src="logo.png" class="logo">
             <ul>
                 <li><a href="/home">Home</a></li>
+                <li><a href="/logout">Log out!</a></li>
                 <li><a href="/transfer">Make a payment</a></li>
-                <li><a href="/logout">Log out</a></li>
+                <li><a href="/leaderboard">Leaderboard</a></li>
             </ul>
 
         </div>
     </div>
 
     <div class="content">
-        <h1>Account History:</h1>
+        <h1>Leaderboard</h1>
+        {% for localId in user_order %}
+            <div class="operation">
+                <h4>{{users.child(localId).get().val()['name']}}</h4>
+                <p>{{users.child(localId).get().val()['balance']}}</p>
+            </div>
+        {% endfor %}
     </div>
 
     <div class="center">
-        {% for action, type in history_list.items() %}
-            <div class="operation">
-                <h4>{{type}}</h4>
-                <p>{{action}}</p>
-            </div>
-        {% endfor %}
     </div>
     
 </body>
