--- a/Individual-Project/templates/signup.html
+++ b/Individual-Project/templates/signup.html
@@ -8,12 +8,9 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo.png" class="logo">
+            <img src="../static/media/logo.png" class="logo">
             <ul>
-                <li><a href="#">SOMETHING</a></li>
-                <li><a href="#">SOMETHING</a></li>
-                <li><a href="#">SOMETHING</a></li>
-                <li><a href="#">SOMETHING</a></li>
+                <li><a href="#">Sign up to access all of our features!</a></li>
             </ul>
 
         </div>
