--- a/Individual-Project/templates/login.html
+++ b/Individual-Project/templates/login.html
@@ -17,8 +17,9 @@
     </div>
 
     <div class="content">
-        <h3>{{num_of_users}} users have already signed in</h3>
-        <h1>${{total_amount_stored}} have been VERY SAFELY secured</h1>
+        <h2>{{num_of_users}} users have already signed in</h2>
+        <h1>${{total_amount_stored}} have been VERY SAFELY secured in our bank</h1>
+        <h3>0 encryption, you know, the whole deal</h3>
     </div>
 
     <div class="center">
@@ -34,7 +35,7 @@
                 <span></span>
                 <label>Password</label>
             </div>
-            <div class="forgot_password">Forgot Password?</div>    
+            <div class="forgot_password"><a href="/we_do_not_care">Forgot Password?</a></div>    
             <input type="submit" value="Log in">
         </form>
         <div class="signup_link">Not a member?<a href="/signup"> Sign up!</a></div>
