added error messages
why am i updating this after the summer?
i dont know
still mad that you guys didn't use this website for the cs money. people wanted to transfer their money between users didn't they!! (rhetorical question without a question mark)
the answer is yes the people wanted transfers and my website delivered and alas,,,, sexism in the workplace (that was a joke)
hope you guys see this but also like sorry
i had a great summer thank you so much for everything <3

--- a/Individual-Project/static/css/style.css
+++ b/Individual-Project/static/css/style.css
@@ -4,7 +4,13 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 
 .banner{
     width:100%;
@@ -13,7 +19,7 @@
 }
 
 .navbar {
-    width: 85%;
+    width: 100%;
     background-color: rgba(0,0,0,.3);
     margin: auto;
     padding: 35px;
@@ -38,6 +44,7 @@
 .navbar ul li a {
     text-decoration: none;
     color: #2b2827;
+    margin-right: 4x0px;
 }
 
 .navbar ul li::after{
@@ -96,7 +103,8 @@
 
 }
 
-form .txt_field{
+form .txt_field{    
+    overflow: visible;
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
@@ -149,8 +157,46 @@ form .select_field{
 
 }
 
+form .custom-selector{
+    position: relative;
+    display: inline-block;
+    font-size: 16px;
+}
+
+form .custom-selector select {
+    width: 100px;
+    min-height: 30px;
+    background:rgb(236, 236, 236)  ;
+    border-radius: 3px;
+    border: 2px solid #adadad;
+    outline: none;
+    padding: 0 10px;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 5px;
+    appearance: none;
+}
+
+.custom-selector::after{
+    content: '';
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent;
+    border-top-color: #2b2827;
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+    bottom: 8px;
+    border-radius: 2px;
+}
+
+#error {
+    color: red;
+    margin-bottom: 5px;
+}
+
 .forgot_password {
-    margin: -5px 0 20px 5px;
+    margin: 0 0 20px 0;
     color: #a6a6a6;
     cursor:pointer;
 }
@@ -231,13 +277,5 @@ span{
 
 button:hover span{
     width: 100%;
-}
-
-.operation{
-    margin: 5px;
-    padding: 10px, 10px, 20px, 10px;
-    height: 70px;
-    background-color: #009688;
-    border-radius: 4px;
 }
 
