--- a/Individual-Project/templates/history.html
+++ b/Individual-Project/templates/history.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/history.css">
     <title>Account History</title>
 </head>
 <body>
