--- a/Individual-Project/static/css/transfer.css
+++ b/Individual-Project/static/css/transfer.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 .banner{
@@ -13,7 +14,7 @@
 }
 
 .navbar {
-    width: 90%;
+    width: 100%;
     margin: auto;
     padding: 35px;
     display: flex;
@@ -30,13 +31,13 @@
 .navbar ul li{
     list-style: none;
     display: inline-block;
-    margin: 0 20px;
+    margin: 0 40px;
     position: relative;
 }
 
 .navbar ul li a {
     text-decoration: none;
-    color: #2b2827;
+    color: #2b2827; 
 
 }
 .navbar ul li::after{
@@ -67,23 +68,33 @@ input {
     background-color: #f1f1f1;
     padding: 10px;
     font-size: 16px;
+    width: 400px;
 }
   
 input[type=text]:enabled{
     background-color: #f1f1f1;
-    width: 100%;
 
-}
-
-input[type=submit]{
-    background-color: DodgerBlue;
-    color: #fff;
 }
 
 input[type="email"]:disabled{
     background-color: #E5E4E2;
 }
 
+input[type="number"]{
+    width: 100px;
+}
+input[type=submit]{
+    background-color: DodgerBlue;
+    color: #fff;
+    width: 200px;
+}
+
+
 .transfer {
     padding-top: 150px;
+}
+
+#error {
+    color: red;
+    margin-bottom: 5px;
 }
